# discordbot-rewrite

./: .gitignore  main.py  pyproject.toml
.github/workflows/: formatter.yml  linter.yml
extensions/: core.py  example_command.py
exts/: core.py  example_command.py
migrations/: _0.py  _1.py  __init__.py
src/: main.py
src/exts/: core.py  example_command.py
